After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787015 - gst-streaming-server : Fix Memory leak in error case in gss-pull.c
gst-streaming-server : Fix Memory leak in error case in gss-pull.c
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-streaming-server
1.12.2
Other All
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-30 13:44 UTC by Satya Prakash Gupta
Modified: 2017-09-11 09:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file is attached. (805 bytes, patch)
2017-08-30 13:44 UTC, Satya Prakash Gupta
committed Details | Review

Description Satya Prakash Gupta 2017-08-30 13:44:43 UTC
Created attachment 358760 [details] [review]
Patch file is attached.

Hi,

File : gst-streaming-server/gst-streaming-server/gss-pull.c

Function  gss_stream_create_follow_pipeline : 245

There is memory leak in error path when "gst_parse_launch" failes.

Solution :  g_string_free (pipe_desc, TRUE);

++patch is attched for possible solution.

Kindly review the patch and provide your feedback.
Comment 1 Sebastian Dröge (slomo) 2017-09-11 09:30:39 UTC
commit 178e25b0d6436e23ec381c4e47001b341c67608d (HEAD -> master)
Author: Satya Prakash Gupta <sp.gupta@samsung.com>
Date:   Wed Aug 30 19:09:18 2017 +0530

    gst-streaming-server: Fix memory leak in error case
    
    https://bugzilla.gnome.org/show_bug.cgi?id=787015